--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
+
 [submodule "static/js/pybossa"]
 	path = static/js/pybossa
-	url = https://github.com/PyBossa/pybossa.js.git
+	url = https://github.com/PyBossa/pybossa.js/
